# PDF-Writer

./: .gitattributes  .gitignore  CLAUDE.md  CMakeLists.txt  Config.cmake.in  LicenseTemplate.txt  PDF Writer project.one  PDFParserTokenizer.cpp  PDFWriter.sln  PDFWriter10.sln  PDFWriterReferencedLibraries.sln  PDFWriterReferencedLibraries10.sln  executable.cpp  readme  readme.md  test.cpp  xmake.lua
.claude/agents/: README.md  example-generator.md
.claude/sessions/: documentation-project-state.md
.github/instructions/: *.instructions.md
.github/workflows/: ci-xmake-linux.yml  cmake.yml
FreeType/: CMakeLists.txt  binding.gyp
FreeType/builds/win32/vc2010/: freetype.sln  freetype.vcxproj  freetype.vcxproj.filters
FreeType/include/freetype/config/: ftconfig.h
FreeType/include/freetype/internal/: ftdriver.h  ftobjs.h  ftserv.h
FreeType/include/freetype/internal/services/: svbdf.h  svcid.h  svgldict.h  svmm.h  svpostnm.h  svpscmap.h  svpsinfo.h  svsfnt.h  svttcmap.h  svttglyf.h
LibAesgm/: CMakeLists.txt
LibJpeg/: CMakeLists.txt  LibJpeg.vcxproj  LibJpeg.vcxproj.filters
LibPng/: CMakeLists.txt  binding.gyp
LibTiff/: CMakeLists.txt  LibTiff.vcproj  LibTiff.vcxproj  LibTiff.vcxproj.filters  binding.gyp  t4.h  tif_aux.c  tif_close.c  tif_codec.c  tif_color.c  tif_compress.c  tif_dir.c  tif_dir.h  tif_dirinfo.c  tif_dirread.c  tif_dirwrite.c  tif_dumpmode.c  tif_error.c  tif_extension.c  tif_fax3.c  tif_fax3.h  tif_flush.c  tif_getimage.c  tif_jbig.c  tif_jpeg.c  tif_luv.c  tif_lzw.c  tif_next.c  tif_ojpeg.c  tif_open.c  tif_packbits.c  tif_pixarlog.c  tif_predict.c  tif_predict.h  tif_print.c  tif_read.c  tif_stream.cxx  tif_strip.c  tif_swab.c  tif_thunder.c  (+10 more)
PDFWriter/: AESConstants.h  ANSIFontWriter.cpp  ANSIFontWriter.h  AbstractContentContext.cpp  AbstractContentContext.h  AbstractGradientShadingPatternWritingTask.cpp  AbstractGradientShadingPatternWritingTask.h  AbstractUnicodeTextUtils.cpp  AbstractUnicodeTextUtils.h  AbstractWrittenFont.cpp  AbstractWrittenFont.h  AdapterIByteReaderWithPositionToIReadPositionProvider.h  ArrayOfInputStreamsStream.cpp  Ascii7Encoding.cpp  Ascii7Encoding.h  BetweenIncluding.h  BoxingBase.h  BufferedOutputStream.cpp  BufferedOutputStream.h  ByteList.cpp  ByteList.h  ByteListSSOImpl.cpp  ByteListSSOImpl.h  ByteListUtils.cpp  ByteListUtils.h  ByteListVectorImpl.cpp  ByteListVectorImpl.h  CFFANSIFontWriter.cpp  CFFANSIFontWriter.h  CFFDescendentFontWriter.cpp  CFFDescendentFontWriter.h  CFFEmbeddedFontWriter.cpp  CFFEmbeddedFontWriter.h  CFFFileInput.cpp  CFFFileInput.h  CFFPrimitiveReader.cpp  CFFPrimitiveReader.h  CFFPrimitiveWriter.cpp  CFFPrimitiveWriter.h  CIDFontWriter.cpp  (+384 more)
PDFWriterTestPlayground/: .gitignore  AppendPagesTest.cpp  AppendPagesTest.h  AppendSpecialPagesTest.cpp  AppendSpecialPagesTest.h  AppendingAndReading.cpp  AppendingAndReading.h  BasicModification.cpp  BasicModification.h  BoxingBaseTest.cpp  BoxingBaseTest.h  BufferedOutputStreamTest.cpp  BufferedOutputStreamTest.h  CMRFontBug.cpp  CMRFontBug.h  CMakeLists.txt  ContentTransferExtenderPDF.cpp  ContentTransferExtenderPDF.h  CopyingAndMergingEmptyPages.cpp  CopyingAndMergingEmptyPages.h  CustomLogTest.cpp  CustomLogTest.h  DCTDecodeFilterTest.cpp  DCTDecodeFilterTest.h  DFontTest.cpp  DFontTest.h  EmptyFileTest.cpp  EmptyFileTest.h  EmptyPagesPDF.cpp  EmptyPagesPDF.h  EncryptedPDF.cpp  EncryptedPDF.h  ExifBugTest.cpp  ExifBugTest.h  FileURL.cpp  FileURL.h  FlateEncryptionTest.cpp  FlateEncryptionTest.h  FlateObjectDecodeTest.cpp  FlateObjectDecodeTest.h  (+119 more)
PDFWriterTestPlayground/TestMaterials/pics-3.7.2/: README
PDFWriterTestPlayground/TestMaterials/pics-3.7.2/depth/: genimages
PDFWriterTestPlayground/TestMaterials/pics-3.7.2/unsupported/: caspian.tif2  ladoga.tif  off_luv24.tif  off_luv32.tif
PDFWriterTesting/: AnnotationsWriter.cpp  AnnotationsWriter.h  AppendAndReplaceURLAnnotations.cpp  AppendPagesTest.cpp  AppendSpecialPagesTest.cpp  AppendWithAnnotations.cpp  AppendingAndReading.cpp  BasicModification.cpp  BoxingBaseTest.cpp  BufferedOutputStreamTest.cpp  CIDSetWritingCFF.cpp  CIDSetWritingTrueType.cpp  CIDSetWritingTrueType2.cpp  CMakeLists.txt  CleanForm.cpp  ColorEmojiColr.cpp  ColorEmojiColrV1.cpp  CopyingAndMergingEmptyPages.cpp  CustomLogTest.cpp  DCTDecodeFilterTest.cpp  DFontTest.cpp  DoubleEndPDFTest.cpp  EmptyFileTest.cpp  EmptyPagesPDF.cpp  EncryptedPDF.cpp  FlateEncryptionTest.cpp  FlateObjectDecodeTest.cpp  FormXObjectTest.cpp  FreeTypeInitializationTest.cpp  HighLevelContentContext.cpp  HighLevelImages.cpp  ICCProfileEmbeddingTest.cpp  ImagesAndFormsForwardReferenceTest.cpp  InputFlateDecodeTester.cpp  InputImagesAsStreamsTest.cpp  JPGImageTest.cpp  JpegLibTest.cpp  LinksTest.cpp  LogTest.cpp  MergePDFPages.cpp  (+54 more)
PDFWriterTesting/testing/: FileURL.h  PosixPath.cpp  TestIO.h  WindowsPath.h
XCode/Freetype.xcodeproj/: project.pbxproj
XCode/LibJpeg.xcodeproj/: project.pbxproj
XCode/LibTiff.xcodeproj/: project.pbxproj
XCode/PDFWriter.xcodeproj/: project.pbxproj
XCode/PDFWriterTestPlayground.xcodeproj/: project.pbxproj
ZLib/: CMakeLists.txt  ZLib.vcproj  ZLib.vcxproj  ZLib.vcxproj.filters  binding.gyp
Zlib/: CMakeLists.txt
cmake/: FindAesgm.cmake
docs/: README.md
docs/examples-code/02_text_and_fonts/: CMakeLists.txt  README.md  multiline_text.cpp  simple_text.cpp
docs/examples-code/03_images/: CMakeLists.txt  README.md  simple_image.cpp
docs/examples-code/04_links/: CMakeLists.txt  README.md  interactive_links.cpp
docs/examples-code/05_pdf_to_pdf/: CMakeLists.txt  README.md  pdf_operations.cpp
docs/getting-started/: core-concepts.md  first-pdf.md  installation.md
docs/guides/: creating-pdfs.md  images.md  links-and-annotations.md  links.md  pdf-to-pdf.md  text-and-fonts.md
jpeg-8d/.deps/: jcprepct.Plo
libFribidi/: .cvsignore  .indent.pro  HACKING  HISTORY  USERS  configure.ac
libFribidi/doc/: .cvsignore
libFribidi/gen.tab/: .cvsignore  gen-arabic-liga.sh
libFribidi/lib/: .cvsignore  Makefile.am  common.h  fribidi-bidi.c  fribidi-bidi.h  fribidi-common.h  fribidi.c  (+3 more)
scripts/: build_icu_for_hummus.sh
(+70 files in other folders)
